--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,34 @@ body {
 }
 .header-container {
     width:100%;
-    background-color:black;
     height:15vh;
     margin: auto;
+    border-bottom: 2px solid #000;
 }
 
 .nav-container {
-    width:10%;
-    min-width:100px;
-    max-width:100px;
-    height:50%;
-    background-color:white;
-    align-content: center;
+    width:150px;
+    height:100%;
+    padding: 0;
+    display: inline-flex;
+    align-items: center;
+}
+
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    width:100%;
+}
+
+.nav-button {
+    width:90%;
+    height:90%;
+    
+}
+
+.nav-button-line {
+    width:100%;
+    height:2%;
+    background-color:#000;
+    margin: 1vh auto;
 }
