--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,27 @@
+/*#FECE60 - yellow*/
+/*#51BBFE - blue*/
+
 body {
     margin: 0; 
     padding: 0;
+    
+    background-color: #FCFCFC;
 }
 .header-container {
     width:100%;
-    height:15vh;
+    height:10vh;
     margin: auto;
-    border-bottom: 2px solid #000;
+    border-bottom: 0.4vh solid #000;
+    display: inline-flex;
+    align-items: center;
+    background-color: #51BBFE;
 }
 
 .nav-container {
-    width:150px;
+    width:5%;
     height:100%;
-    padding: 0;
+    margin-left: 1%;
+    margin-top:auto;    
     display: inline-flex;
     align-items: center;
 }
@@ -30,8 +39,33 @@ body {
 }
 
 .nav-button-line {
-    width:100%;
-    height:2%;
-    background-color:#000;
+    width:90%;
+    height:12.5%;
+    background-color:#0F0F0F;
     margin: 1vh auto;
+    margin-left:2.5%;
+}
+
+.logo-container {
+    width:50%;
+    height:100%;
+    
+}
+
+.language-container {
+    width: 25%;
+    height:100%;
+}
+
+.filler-container {
+    width:19%;
+    height:100%;
+}
+
+.logo-container p{
+    
+    text-align: center;
+    font-size: 10vh;
+    line-height: 15vh;
+    margin-top: -15px;
 }
