--- a/css/style.css
+++ b/css/style.css
@@ -4,17 +4,17 @@
 body {
     margin: 0; 
     padding: 0;
-    
+
     background-color: #FCFCFC;
 }
 .header-container {
     width:100%;
     height:10vh;
     margin: auto;
-    border-bottom: 0.4vh solid #000;
     display: inline-flex;
     align-items: center;
     background-color: #51BBFE;
+    box-shadow: 0px 0px 6px 1px #000;
 }
 
 .nav-container {
