--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,11 @@ body {
 }
 .header-container {
     width:100%;
-    height:10vh;
+    height:15vh;
     margin: auto;
     display: inline-flex;
     align-items: center;
-    background-color: #51BBFE;
+    background-color: #FFFFFF;
     box-shadow: 0px 0px 6px 1px #000;
 }
 
@@ -35,14 +35,16 @@ body {
 
 .nav-button {
     width:90%;
-    height:90%;
+    height:50%;
     position: relative;
     cursor: pointer;
+    top: 0;
 }
 
 .nav-button-line {
-    width:90%;
-    height:17.5%;
+    width:80%;
+    min-width: 80px;
+    height:15%;
     background-color:#0F0F0F;
     margin: 1vh auto;
     margin-left:5%;
@@ -65,10 +67,12 @@ body {
 
 .logo-container p{
     text-align: center;
-    font-size: 10vh;
-    line-height: 15vh;
-    margin-top: -15px;
+    font-size: 6vh;
+    line-height: 3vh;
+    position: relative;
+    top: 0;
 }
+
 .nav-dropdown {
     display:none;
     position: absolute;
@@ -76,7 +80,7 @@ body {
     box-shadow: 0px 8px 16px 0px #000;
     min-width: 160px;
     max-width:250px;
-    top:100%;
+    bottom:-225%;
 }
 
 .nav-dropdown a {
@@ -95,11 +99,11 @@ body {
     position: relative;
     width:5%;
     height:100%;
-    background-color: #51BBFE;
+    background-color: #FFFFFF;
     left:22.22%;
 }
 
-.nav-container:hover .nav-dropdown {
+.nav-button:hover .nav-dropdown {
     display: block;
 }
 
