--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
     align-items: center;
     background-color: #FFFFFF;
     box-shadow: 0px 0px 6px 1px #000;
+    z-index: 3;
 }
 
 .nav-container {
@@ -33,21 +34,21 @@ body {
 }
 
 .nav-button {
-    width:90%;
+    width:30%;
+    margin-left:30%;
     height:50%;
-    margin-left:50%;
     max-width: 150px;
     position: relative;
-    cursor: pointer;
-    top: 0;
+    bottom: 0;
+    text-align: center;
+    
 }
 
 .nav-button-line {
     width:100%;
-    height:15%;
+    height:5%;
     background-color:#0F0F0F;
     margin: 1vh auto;
-    margin-left:5%;
 }
 
 .logo-container {
@@ -77,12 +78,11 @@ body {
     display:none;
     position: absolute;
     z-index:2;
-    width:50vh;
+    width:20vh;
     text-align: center;
     box-shadow: 0px 8px 30px 0px #000;
-    bottom: -430%;
-    left: -75%;
-    font-size: 4vh;
+    top: 200px;
+    left: 0;
 }
 
 .nav-dropdown a {
@@ -105,8 +105,11 @@ body {
     left:22.22%;
 }
 
-.nav-container:hover .nav-dropdown {
+.nav-button:hover .nav-dropdown {
     display: block;
 }
 
-
+.nav-text {
+    width:100%;
+    height:50%;
+}
