--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
     align-items: center;
     background-color: #FFFFFF;
     box-shadow: 0px 0px 6px 1px #000;
-    z-index: 3;
+    z-index: 99;
 }
 
 .nav-container {
@@ -37,9 +37,7 @@ body {
     width:30%;
     margin-left:30%;
     height:50%;
-    max-width: 150px;
-    position: relative;
-    bottom: 0;
+    max-width: 150px;;
     text-align: center;
     
 }
@@ -77,11 +75,12 @@ body {
 .nav-dropdown {
     display:none;
     position: absolute;
-    z-index:2;
-    width:20vh;
+    z-index:-1;
+    width:30vh;
+    height: 85%;
     text-align: center;
     box-shadow: 0px 8px 30px 0px #000;
-    top: 200px;
+    bottom: 0;
     left: 0;
 }
 
@@ -104,12 +103,11 @@ body {
     background-color: #FFFFFF;
     left:22.22%;
 }
-
-.nav-button:hover .nav-dropdown {
-    display: block;
-}
-
 .nav-text {
     width:100%;
     height:50%;
+}
+
+.dropdown-container {
+    height:100%;
 }
