--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@
 body {
     margin: 0; 
     padding: 0;
-
     background-color: #FCFCFC;
+    
 }
 .header-container {
     width:100%;
@@ -36,8 +36,8 @@ body {
 .nav-button {
     width:30%;
     margin-left:30%;
-    height:50%;
-    max-width: 150px;;
+    height:80%;
+    max-width: 150px;
     text-align: center;
     
 }
@@ -66,8 +66,7 @@ body {
 
 .logo-container p{
     text-align: center;
-    font-size: 6vh;
-    line-height: 3vh;
+    font-size: 4em;
     position: relative;
     top: 0;
 }
@@ -90,10 +89,11 @@ body {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    font-size: 1.5em;
 }
 
 .nav-dropdown a:hover{
-    background-color:#51BBFE; 
+    background-color:#51BBFE;
 }
 
 .linedivider {
@@ -105,9 +105,13 @@ body {
 }
 .nav-text {
     width:100%;
-    height:50%;
+    height:30%;
+    margin-left: -25%;
 }
 
+.nav-text {
+    font-size: 2em;
+}
 .dropdown-container {
     height:100%;
 }
