--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,13 @@ body {
 }
 .header-container {
     width:100%;
-    height:15vh;
+    height:150px;
     margin: auto;
     display: inline-flex;
     align-items: center;
     background-color: #FFFFFF;
     box-shadow: 0px 0px 6px 1px #000;
-    z-index: 99;
+    
 }
 
 .nav-container {
@@ -36,7 +36,7 @@ body {
 .nav-button {
     width:30%;
     margin-left:30%;
-    height:80%;
+    height:60%;
     max-width: 150px;
     text-align: center;
     
@@ -47,6 +47,7 @@ body {
     height:5%;
     background-color:#0F0F0F;
     margin: 1vh auto;
+    min-width:50px;
 }
 
 .logo-container {
@@ -75,11 +76,11 @@ body {
     display:none;
     position: absolute;
     z-index:-1;
-    width:30vh;
-    height: 85%;
+    width:250px;
     text-align: center;
     box-shadow: 0px 8px 30px 0px #000;
-    bottom: 0;
+    top:150px;
+    bottom:0;
     left: 0;
 }
 
