--- a/css/omOss_midlertidig.css
+++ b/css/omOss_midlertidig.css
@@ -1,45 +1,177 @@
 
-/*
-omOss.php under.
-*/
+.infoBox {
+    position: fixed;
+    left: 10%;
+    width: 40%;
+    top: 20%;
+    bottom: 25%;
+    background-color: lightgray;
+    box-shadow: 1px 1px 1px 1px #000;
+}
 
-.container {
-    position: absolute;
+
+#infoText {
+    position: relative;
+    width: 90%;
+    left: 5%;
+}
+
+#infoText p {
+    font-family: sans-serif;
+    font-size: 1.2em;
+}
+
+.exampleImage {
+    position: fixed;
+    right: 10%;
+    width: 40%;
+    top: 20%;
+    bottom: 25%;
+    background-color: lightgrey;
+    box-shadow: 1px 1px 1px 1px #000
+}
+
+#photo1 {
     width: 100%;
     height: 100%;
-    background-color: whitesmoke;
+    max-width: 100%;
 }
 
-p {
-    font: Arial;
+#infoList {
+    font-size: 2em;
+    font-family: sans-serif;
 }
 
-.contactBox {
-    position: absolute;
-    bottom: 3%;
+.cantactInfo {
+    position: fixed;
+    background-color: lightgray;
+    width:80%;
+    height: 19%;
     left: 10%;
-    right: 10%;
-    height: 18%;
-    background-color: lightblue;
-    font-size: 1.5em;
-    padding: 1%;
+    bottom: 5%;
+    box-shadow: 1px 1px 6px 0px #000
 }
 
-.textBox {
-    background-color: lightblue;
-    left: 10%; 
-}
 
-.photoBox {
-    background-color: lightslategray;
-    right: 10%;
+/* Tilhører header.php */
+body {
+    margin: 0; 
+    padding: 0;
+    background-color: #FCFCFC;
+    min-height: 100%;
+    
+}
+.header-container {
+    width:100%;
+    height:150px;
+    margin: auto;
+    display: inline-flex;
+    align-items: center;
+    background-color: #FFFFFF;
+    box-shadow: 0px 0px 6px 1px #000;
     
 }
 
-.textBox, .photoBox {
+.nav-container {
+    width:10%;
+    height:100%;
+    margin-top:auto;    
+    display: inline-flex;
+    align-items: center;
+}
+
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    width:100%;
+}
+
+.nav-button {
+    width:30%;
+    margin-left:30%;
+    height:60%;
+    max-width: 150px;
+    text-align: center;
+    
+}
+
+.nav-button-line {
+    width:100%;
+    height:5%;
+    background-color:#0F0F0F;
+    margin: 1vh auto;
+    min-width:50px;
+}
+
+.logo-container {
+    width:50%;
+    height:100%;
+}
+
+.language-container {
+    width: 25%;
+    height:100%;
+}
+
+.filler-container {
+    width:15%;
+    height:100%;
+}
+
+.logo-container p{
+    text-align: center;
+    font-size: 4em;
+    position: relative;
+    top: 0;
+}
+
+.nav-dropdown {
+    display:none;
     position: absolute;
-    width: 39.60%;
-    height: 55%;
-    bottom: 27%;
-    padding: 0.5%;
+    z-index:-1;
+    width:250px;
+    text-align: center;
+    box-shadow: 0px 8px 30px 0px #000;
+    top:150px;
+    bottom:0;
+    left: 0;
+}
+
+.nav-dropdown a {
+    color: #000;
+    background-color: #FFF;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-size: 1.5em;
+}
+
+.nav-dropdown a:hover{
+    background-color:#51BBFE;
+}
+
+.linedivider {
+    position: relative;
+    width:5%;
+    height:100%;
+    background-color: #FFFFFF;
+    left:22.22%;
+}
+.nav-text {
+    width:100%;
+    height:30%;
+    margin-left: -25%;
+}
+
+.nav-text {
+    font-size: 2em;
+}
+.dropdown-container {
+    height:100%;
+}
+
+.overlay {
+    width:100%;
+    height:100%;
+    background-color: blue;
 }
