--- a/css/campusInfo.css
+++ b/css/campusInfo.css
@@ -1,10 +1,173 @@
-.container {
-    margin:auto;
-    width:100%;
+* {
+    margin: 0;
 }
 
-.header {
-    font-family: monospace;
-    font-size: 30px;
-    color: #FFD678;
+h1  {
+    font-family: sans-serif;
+    padding: 0.75em;
+    text-align: left;
+    
 }
+
+p {
+    font-family: sans-serif;
+    margin-left: 25px;
+    text-align: left;
+}
+
+html, body {
+    height: 100%;
+}
+
+/*
+nav {
+    position: fixed;
+    width:100%;
+    height: 100px;
+    background-color: rgba(140, 127, 114, 0.5);
+    z-index: 100;
+    text-align: center;
+} */
+
+.photo {
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.text {
+    height: 50%;
+    background-color: beige;
+    text-align: left;
+}
+
+
+.sectOne {
+    background-image: url("/westerdals1.jpg")
+}
+
+.sectTwo {
+    background-image: url("/westerdals2.jpg")
+}
+
+.sectThree {
+    background-image: url("/westerdals3.jpg")
+}
+
+#mapVulkan {
+    height: 150px;
+    width: 300px;
+    margin-left: 550px;
+    margin-top: 15px;
+    
+
+}
+
+
+/* header code */
+/*#FECE60 - yellow*/
+/*#51BBFE - blue*/
+
+body {
+    margin: 0; 
+    padding: 0;
+    background-color: #FCFCFC;
+}
+.header-container {
+    width:100%;
+    height:15vh;
+    margin: auto;
+    display: inline-flex;
+    align-items: center;
+    background-color: #FFFFFF;
+    box-shadow: 0px 0px 6px 1px #000;
+}
+
+.nav-container {
+    width:10%;
+    height:100%;
+    margin-top:auto;    
+    display: inline-flex;
+    align-items: center;
+}
+
+
+.nav-button {
+    width:90%;
+    height:50%;
+    margin-left:50%;
+    max-width: 150px;
+    position: relative;
+    cursor: pointer;
+    top: 0;
+}
+
+.nav-button-line {
+    width:100%;
+    height:15%;
+    background-color:#0F0F0F;
+    margin: 1vh auto;
+    margin-left:5%;
+}
+
+.logo-container {
+    width:50%;
+    height:100%;
+}
+
+.language-container {
+    width: 25%;
+    height:100%;
+}
+
+.filler-container {
+    width:15%;
+    height:100%;
+}
+
+.logo-container p{
+    text-align: center;
+    font-size: 6vh;
+    line-height: 3vh;
+    position: relative;
+    top: 0;
+}
+
+.nav-dropdown {
+    display:none;
+    position: absolute;
+    z-index:2;
+    width:50vh;
+    text-align: center;
+    box-shadow: 0px 8px 30px 0px #000;
+    bottom: -430%;
+    left: -75%;
+    font-size: 4vh;
+}
+
+.nav-dropdown a {
+    color: #000;
+    background-color: #FFF;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.nav-dropdown a:hover{
+    background-color:#51BBFE; 
+}
+
+.linedivider {
+    position: relative;
+    width:5%;
+    height:100%;
+    background-color: #FFFFFF;
+    left:22.22%;
+}
+
+.nav-container:hover .nav-dropdown {
+    display: block;
+}
+
+
