Made changes to header dropdown

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,8 @@ body {
     align-items: center;
     background-color: #FFFFFF;
     box-shadow: 0px 0px 6px 1px #000;
-    
+    position: relative;
+    z-index: 3;
 }
 
 .nav-container {
@@ -76,18 +77,18 @@ body {
 .nav-dropdown {
     display:none;
     position: absolute;
-    z-index:-1;
     width:250px;
     text-align: center;
     box-shadow: 0px 8px 30px 0px #000;
     top:150px;
     bottom:0;
     left: 0;
+    background-color: #FFF;
+    z-index: 2;
 }
 
 .nav-dropdown a {
     color: #000;
-    background-color: #FFF;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
