--- a/css/omOss_midlertidig.css
+++ b/css/omOss_midlertidig.css
@@ -69,6 +69,8 @@ body {
     align-items: center;
     background-color: #FFFFFF;
     box-shadow: 0px 0px 6px 1px #000;
+    position: relative;
+    
     
 }
 
