--- a/css/style.css
+++ b/css/style.css
@@ -136,13 +136,16 @@ background-color: blue;
     align-items: center;
     background-color: #FCFCFC;
     box-shadow: 0px 0px 6px 1px #000;
-    max-width: 100%;
+    position: fixed;
+    z-index:3;
 }
 
 .menu-container {
     background-color: #404040;
     width:90px;
     height:90px;
+    min-width: 90px;
+    min-height:90px;
 
 }
 
@@ -198,4 +201,30 @@ background-color: blue;
     position: relative;
     top: 10%;
     color:#808080;
+}
+
+.menu-dropdown {
+    display:block;
+    position: absolute;
+    width:200px;
+    text-align: center;
+    box-shadow: 0px 8px 30px 0px #000;
+    top:90px;
+    bottom:0;
+    left: 0;
+    background-color: #595959;
+    z-index: 2;
+}
+
+.menu-dropdown a{
+    color: #FFF;
+    font-family: sans-serif;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-size: 1.5em;
+}
+
+.menu-dropdown a:hover{
+    background-color: #808080;
 }
