--- a/css/style.css
+++ b/css/style.css
@@ -204,10 +204,10 @@ background-color: blue;
 }
 
 .menu-dropdown {
-    display:block;
+    display:none;
     position: absolute;
     width:200px;
-    text-align: center;
+    text-align: left;
     box-shadow: 0px 8px 30px 0px #000;
     top:90px;
     bottom:0;
@@ -219,12 +219,39 @@ background-color: blue;
 .menu-dropdown a{
     color: #FFF;
     font-family: sans-serif;
-    padding: 12px 16px;
     text-decoration: none;
-    display: block;
     font-size: 1.5em;
 }
 
-.menu-dropdown a:hover{
+.navigation-container:hover{
     background-color: #808080;
+}
+
+.icon {
+    float: left;
+    width:25%;
+    height:100%;
+}
+
+.menu-choice-text {
+    float: left;
+    width:75%;
+    height: 100%;
+    line-height: 50px;
+}
+
+.menu-dropdown a *{
+    border-bottom: 1px solid #000;
+}
+
+.icon img{
+    position: relative;
+    width:70%;
+    left: 10px;
+    top:15%;
+}
+
+.navigation-container {
+    width:100%;
+    height:50px;
 }
