--- a/css/campusInfo.css
+++ b/css/campusInfo.css
@@ -19,8 +19,8 @@ html, body {
     height: 100%;
 }
 
-/*
-nav {
+
+/* nav {
     position: fixed;
     width:100%;
     height: 100px;
@@ -44,15 +44,15 @@ nav {
 
 
 .sectOne {
-    background-image: url("/westerdals1.jpg")
+    background-image: url("../Bilder/westerdals1.jpg")
 }
 
 .sectTwo {
-    background-image: url("/westerdals2.jpg")
+    background-image: url("../Bilder/westerdals2.jpg")
 }
 
 .sectThree {
-    background-image: url("/westerdals3.jpg")
+    background-image: url("../Bilder/westerdals3.jpg")
 }
 
 #mapVulkan {
@@ -60,12 +60,10 @@ nav {
     width: 300px;
     margin-left: 550px;
     margin-top: 15px;
-    
-
 }
 
 
-/* header code */
+
 /*#FECE60 - yellow*/
 /*#51BBFE - blue*/
 
@@ -73,15 +71,18 @@ body {
     margin: 0; 
     padding: 0;
     background-color: #FCFCFC;
+    min-height: 100%;
+    
 }
 .header-container {
     width:100%;
-    height:15vh;
+    height:150px;
     margin: auto;
     display: inline-flex;
     align-items: center;
     background-color: #FFFFFF;
     box-shadow: 0px 0px 6px 1px #000;
+    
 }
 
 .nav-container {
@@ -90,25 +91,30 @@ body {
     margin-top:auto;    
     display: inline-flex;
     align-items: center;
+
+
 }
 
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    width:100%;
+}
 
 .nav-button {
-    width:90%;
-    height:50%;
-    margin-left:50%;
+    width:30%;
+    margin-left:30%;
+    height:60%;
     max-width: 150px;
-    position: relative;
-    cursor: pointer;
-    top: 0;
+    text-align: center;
 }
 
 .nav-button-line {
     width:100%;
-    height:15%;
+    height:5%;
     background-color:#0F0F0F;
     margin: 1vh auto;
-    margin-left:5%;
+    min-width:50px;
 }
 
 .logo-container {
@@ -128,8 +134,7 @@ body {
 
 .logo-container p{
     text-align: center;
-    font-size: 6vh;
-    line-height: 3vh;
+    font-size: 4em;
     position: relative;
     top: 0;
 }
@@ -137,13 +142,13 @@ body {
 .nav-dropdown {
     display:none;
     position: absolute;
-    z-index:2;
-    width:50vh;
+    z-index:-1;
+    width:250px;
     text-align: center;
     box-shadow: 0px 8px 30px 0px #000;
-    bottom: -430%;
-    left: -75%;
-    font-size: 4vh;
+    top:150px;
+    bottom:0;
+    left: 0;
 }
 
 .nav-dropdown a {
@@ -152,10 +157,11 @@ body {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    font-size: 1.5em;
 }
 
 .nav-dropdown a:hover{
-    background-color:#51BBFE; 
+    background-color:#51BBFE;
 }
 
 .linedivider {
@@ -165,9 +171,21 @@ body {
     background-color: #FFFFFF;
     left:22.22%;
 }
-
-.nav-container:hover .nav-dropdown {
-    display: block;
+.nav-text {
+    width:100%;
+    height:30%;
+    margin-left: -25%;
 }
 
+.nav-text {
+    font-size: 2em;
+}
+.dropdown-container {
+    height:100%;
+}
 
+.overlay {
+    width:100%;
+    height:100%;
+    background-color: blue;
+}
