--- a/css/style.css
+++ b/css/style.css
@@ -255,3 +255,59 @@ background-color: blue;
     width:100%;
     height:50px;
 }
+
+.tip-container {
+    position: fixed;
+    bottom:-281px;
+    left:20px;
+    width: 300px;
+    height: 310px;
+    border: 1px solid #000;
+    background-color: #595959;
+    color: #FFF;    
+    transition: bottom linear 1.2s;
+}
+
+.tip-bar {
+    width: 100%;
+    height:30px;
+    border-bottom: 1px solid #000;
+    position: relative;
+    top: 0;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 1.1em;
+    line-height: 30px;
+    cursor: pointer;    
+    background-color:#404040;
+    color: #FFF;
+    
+}
+
+#tip-form {
+    width:300px;
+    text-align: center;
+    font-family: sans-serif;
+}
+
+.form-input {
+    width:90%;
+}
+
+.form-desc {
+    width:90%;
+    height: 70px;
+    resize: none;
+}
+
+
+
+.form-button {    
+    background-color:#404040;
+    color: #FFF;
+    cursor: pointer;
+}
+
+.tip-container:hover {
+    bottom: 0;
+}
