--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ background-color: blue;
     align-items: center;
     background-color: #FCFCFC;
     box-shadow: 0px 0px 6px 1px #000;
-    position: fixed;
+    position: relative;
     z-index:3;
 }
 
@@ -310,4 +310,50 @@ background-color: blue;
 
 .tip-container:hover {
     bottom: 0;
+}
+
+
+.back-to-top-button {
+    position: fixed;
+    cursor: pointer;
+    bottom: 20px;
+    right: 20px;
+    z-index: 5;
+    
+    width: 75px;
+    height: 75px;
+    background-color: #404040;
+    border-radius: 100%;
+}
+
+.fillbox {
+    width:100%;
+    height:2000px;
+}
+
+.up-icon {
+    position: relative;
+    top: 10%;
+    width: 80%;
+    max-width: 100%;
+    transition: all linear 0.5s;
+}
+
+.back-to-top-middle-area {
+    width:85%;
+    height: 85%;
+    background-color: #595959;
+    margin: auto;
+    border-radius: 100%;
+    position: relative;
+    top: 7.5%;
+}
+
+.back-to-top-button:hover .up-icon {
+    top: 0%;
+    width: 100%;
+}
+#top-button {
+    
+    display: none;
 }
