Added correct icons for menu. Made header fill up entire top. Made small changes to sizes and z-index layers.

--- a/css/campusInfo.css
+++ b/css/campusInfo.css
@@ -80,7 +80,7 @@ body {
     margin: auto;
     display: inline-flex;
     align-items: center;
-    background-color: #FFFFFF;
+    background-color: #595959;
     box-shadow: 0px 0px 6px 1px #000;
     
 }
