--- a/css/style.css
+++ b/css/style.css
@@ -131,10 +131,11 @@ background-color: blue;
 /*HEADER2 CSS*/
 .header-container {
     height:90px;
+    width:100%;
     margin: auto;
     display: inline-flex;
     align-items: center;
-    background-color: #FCFCFC;
+    background-color: #595959;
     box-shadow: 0px 0px 6px 1px #000;
     position: relative;
     z-index:3;
@@ -170,8 +171,7 @@ background-color: blue;
 
 .logo-container {
     height: 100%;
-    width:800px;
-    min-width: 660px;
+    width: 800px;
     background-color:#595959;
 }
 
@@ -183,7 +183,7 @@ background-color: blue;
 
 .logo {
     line-height: 90px;  
-    font-size: 50px;
+    font-size: 3.1em;
     width:33.33%;
     float: left;
     left: 5%;
@@ -220,7 +220,7 @@ background-color: blue;
     color: #FFF;
     font-family: sans-serif;
     text-decoration: none;
-    font-size: 1.5em;
+    font-size: 1.3em;
 }
 
 .navigation-container:hover{
@@ -240,10 +240,6 @@ background-color: blue;
     line-height: 50px;
 }
 
-.menu-dropdown a *{
-    border-bottom: 1px solid #000;
-}
-
 .icon img{
     position: relative;
     width:70%;
@@ -254,6 +250,7 @@ background-color: blue;
 .navigation-container {
     width:100%;
     height:50px;
+    border-bottom: 1px solid #000;
 }
 
 .tip-container {
@@ -265,7 +262,8 @@ background-color: blue;
     border: 1px solid #000;
     background-color: #595959;
     color: #FFF;    
-    transition: bottom linear 1.2s;
+    transition: bottom linear 0.7s;
+    z-index: 55;
 }
 
 .tip-bar {
@@ -320,8 +318,8 @@ background-color: blue;
     right: 20px;
     z-index: 5;
     
-    width: 75px;
-    height: 75px;
+    width: 5%;
+    height: 9.5%;
     background-color: #404040;
     border-radius: 100%;
 }
@@ -356,4 +354,8 @@ background-color: blue;
 #top-button {
     
     display: none;
+}
+
+.icon img{
+    max-width: 100%;
 }
