Renamed header2.php to header.php after removing old header.php

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
     min-height: 100%;
 }
 
-/*HEADER2 CSS*/
+/*HEADER CSS*/
 .header-container, .logo-container, .menu-dropdown {
     background-color: #595959;
 }
