Testing potential searchbar possibilities without bootstrap

--- a/css/searchbar.css
+++ b/css/searchbar.css
@@ -121,3 +121,9 @@
 .dropdown4:hover .dropbtn {
     background-color: #3e8e41;
 }
+
+.dropdown-container {
+    width:100px;
+    height:100px;
+    font-size: 100px;
+}
