--- a/css/style.css
+++ b/css/style.css
@@ -242,3 +242,58 @@ body {
     display: none;
 }
 /*RETURN TO TOP BUTTON CSS ENDS*/
+
+.search-container {
+    width:100%;
+    height:300px;
+    background-color: #808080;
+}
+
+.search-box {
+    position: relative;
+    max-width: 100%;
+    width: 1000px;
+    height: 25%;
+    margin: auto;
+    top: 30%;
+}
+
+.search-criteria {
+    float:left;
+    height: 100%;
+    width: 20%;
+    margin: 10px;
+    font-size: 1.5em;
+    
+    text-align: center;
+}
+
+.search-criteria, .dropdown {
+    box-shadow: 0px 0px 3px 1px #000;
+    background-color: #595959;
+    color: white;
+    text-align: center;
+    line-height: 1.5em;
+    font-family: sans-serif;
+    cursor: pointer;
+}
+
+.campus-dropdown {
+    height: 100%;
+    width:320%;
+}
+
+
+
+.campus-options {
+    width:33%;
+    height:100%;
+    float:left;
+    font-size: 0.9em;
+    line-height: 3em;
+    position: relative;
+}
+
+span {
+    text-align: center;
+}
