--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,11 @@ body {
 }
 
 /*HEADER CSS*/
-.header-container, .logo-container, .menu-dropdown {
+.header-container, .logo-container, .menu-dropdown, option{
     background-color: #595959;
 }
 
-.menu-container, .tip-bar, .form-button, .back-to-top-button {
+.menu-container, .tip-bar, .form-button, .back-to-top-button, .search-criteria, .search-button {
     background-color: #404040;
 }
 
@@ -246,13 +246,13 @@ body {
 .search-container {
     width:100%;
     height:300px;
-    background-color: #808080;
 }
 
 .search-box {
     position: relative;
     max-width: 100%;
-    width: 1000px;
+    width: 1000px;    
+    min-width: 1000px;
     height: 25%;
     margin: auto;
     top: 30%;
@@ -262,28 +262,22 @@ body {
     float:left;
     height: 100%;
     width: 20%;
-    margin: 10px;
-    font-size: 1.5em;
-    
-    text-align: center;
+    margin-left: 0.5%
 }
 
-.search-criteria, .dropdown {
-    box-shadow: 0px 0px 3px 1px #000;
-    background-color: #595959;
+.search-criteria, .search-button {
     color: white;
     text-align: center;
-    line-height: 1.5em;
+    line-height: 2.5em;
     font-family: sans-serif;
     cursor: pointer;
+    font-size: 1.5em;
 }
 
 .campus-dropdown {
     height: 100%;
     width:320%;
 }
-
-
 
 .campus-options {
     width:33%;
@@ -294,6 +288,13 @@ body {
     position: relative;
 }
 
-span {
-    text-align: center;
+.search-button {
+    position: relative;
+    float: right;
+    width:17.5%;
+    top: 9%;
+    margin-left: .5%;
+    height: 80%;
+    box-shadow: 2px 2px 5px 1px #000;
 }
+
