--- a/css/stil.css
+++ b/css/stil.css
@@ -1,59 +1,49 @@
-html, body 
-{
-    height: 100%;
-    
-    background-color: #Fece60;
-}
 
-
- 
-
-
-
-
-
-
-.container3 {
-                  position: absolute;
-                  top: 22%;
-                  left: 73%;
-                  width: 13%;
-                  height: 20%;
-                  background-color: yellow;
-          }
+          
   
-.container1 {
+.eventsidecontainer1 {
                   position: absolute;
                   top: 22%;
                   left: 14%;
                   width: 13%;
                   height: 20%;
-                  background-image: url(bjorn.jpeg);
+                  background-image: url(../Bilder/bjorn.jpeg);
                   overflow: hidden;
+                  box-shadow: 0px 8px 30px 0px #000;
           }
 
           
   
-.container2 {
+.eventsidecontainer2 {
                   position: absolute;
                   top: 22%;
                   left: 42%;
                   width: 30%;
                   height: 20%;
                   background-color: chartreuse;
+                  box-shadow: 0px 8px 30px 0px #000;
           }
 
+.eventsidecontainer3 {
+                  position: absolute;
+                  top: 22%;
+                  left: 73%;
+                  width: 13%;
+                  height: 20%;
+                  background-color: yellow;
+                  box-shadow: 0px 8px 30px 0px #000;
+}
+
         
-#map {
-    position: absolute;
-    top: 22%;
-    left: 28%;
-    width: 13%;
-    height: 20%;
-    
+#eventsidemap {
+                  position: absolute;
+                  top: 22%;
+                  left: 28%;
+                  width: 13%;
+                  height: 20%;
+                  box-shadow: 0px 8px 30px 0px #000;
 }      
         
-
 
         
           
