Minor updates to yesterdays modifications.

--- a/css/omOss_midlertidig.css
+++ b/css/omOss_midlertidig.css
@@ -74,7 +74,7 @@
 body {
     margin: 0; 
     padding: 0;
-    background-color: #FCFCFC;
+    background-image: url(../Bilder/testBackground.jpg);
     min-height: 100%;
 }
 
