--- a/css/style.css
+++ b/css/style.css
@@ -290,3 +290,46 @@ body {
     width: 5%;
     height: 100%;
 }
+
+
+.eventsidecontainer1 {
+                  position: absolute;
+                  top: 45%;
+                  left: 14%;
+                  width: 13%;
+                  height: 20%;
+                  background-image: url(../Bilder/bjorn.jpeg);
+                  overflow: hidden;
+                  box-shadow: 0px 5px 20px 0px #000;
+          }
+
+
+.eventsidecontainer2 {
+                  position: absolute;
+                  top: 45%;
+                  left: 42%;
+                  width: 30%;
+                  height: 20%;
+              
+                  box-shadow: 0px 5px 20px 0px #000;
+          }
+
+.eventsidecontainer3 {
+                  position: absolute;
+                  top: 45%;
+                  left: 73%;
+                  width: 13%;
+                  height: 20%;
+
+                  box-shadow: 0px 5px 20px 0px #000;
+}
+
+        
+#eventsidemap {
+                  position: absolute;
+                  top: 45%;
+                  left: 28%;
+                  width: 13%;
+                  height: 20%;
+                  box-shadow: 0px 5px 20px 0px #000;
+}
