--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
     background-color: #595959;
 }
 
-.menu-container, .tip-bar, .form-button, .back-to-top-button, .search-criteria, .search-button {
+.menu-container, .tip-bar, .form-button, .back-to-top-button, .search-criteria, .search-button, .language-button {
     background-color: #404040;
 }
 
@@ -33,6 +33,7 @@ body {
 }
 
 .menu-container {
+    float:left; 
     width:90px;
     height:90px;
     min-width: 90px;
@@ -59,8 +60,9 @@ body {
 }
 
 .logo-container {
+    float:left;
     height: 100%;
-    width: 800px;
+    width: 300px;
 }
 
 .logo-container *{
@@ -76,10 +78,18 @@ body {
 
 }
 
+.logo-filler {
+    float: left; 
+    width: 10%;
+    height: 100%;
+}
+
 .tag-line-container {
     height: 100%;
     width: 40px;
     float: left;
+    position: relative;
+    left: 1%;
 
 }
 
@@ -249,7 +259,7 @@ body {
 .search-box {
     position: relative;
     max-width: 100%;
-    width: 800px;    
+    width: 1000px;    
     min-width: 800px;
     height: 25%;
     margin: auto;
@@ -257,10 +267,9 @@ body {
 }
 
 .search-criteria {
-    float:left;
     height: 100%;
-    width: 25%;
-    margin-left: 0.5%;
+    width: 20%;
+    margin-left: 2.5%;
     cursor: pointer;
     box-shadow: 2px 2px 5px 1px #000;
     border: none;
@@ -272,21 +281,36 @@ body {
     line-height: 2.5em;
     font-family: sans-serif;
     font-size: 1.5em;
+    float: left;
 }
 
 .search-button {
     position: relative;
-    float: left;
-    width:22.5%;
+    width:17.5%;
     top: 9%;
-    margin-left: .5%;
+    margin-left: 2.5%;
     height: 80%;
     box-shadow: 2px 2px 5px 1px #000;
 }
 /*SEARCH CSS ENDS*/
 
-.logo-filler {
-    float: left; 
-    width: 5%;
+.language-container {
+    position: absolute;
+    right: 0;
+    width: 150px;
     height: 100%;
+}
+
+.language-button {
+    height: 50%;
+    width: 80%;
+    color: #FFF;
+    position: absolute;
+    top: 25%;
+    left: 10%;
+    box-shadow: 2px 2px 5px 1px #000;
+    font-family: sans-serif;
+    text-align: center;
+    font-size: 1em;
+    line-height: 2.5em;
 }
