--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
     background-color: #404040;
 }
 
-.menu-line, .navigation-container:hover{    
+.menu-line, .navigation-container:hover, .search-info-container{    
     background-color:#808080;
 }
 
@@ -175,7 +175,7 @@ body {
     line-height: 30px;
     cursor: pointer;    
     color: #FFF;
-    
+
 }
 
 #tip-form {
@@ -212,7 +212,7 @@ body {
     bottom: 20px;
     right: 20px;
     z-index: 5;
-    
+
     width: 5%;
     height: 9.5%;
     border-radius: 100%;
@@ -257,18 +257,18 @@ body {
 }
 
 .search-box {
-    position: relative;
     max-width: 100%;
-    width: 1000px;    
+    width: 800px;    
     min-width: 800px;
     height: 25%;
     margin: auto;
+    position: relative;
     top: 30%;
 }
 
 .search-criteria {
     height: 100%;
-    width: 20%;
+    width: 22.5%;
     margin-left: 2.5%;
     cursor: pointer;
     box-shadow: 2px 2px 5px 1px #000;
@@ -278,7 +278,6 @@ body {
 .search-criteria, .search-button {
     color: white;
     text-align: center;
-    line-height: 2.5em;
     font-family: sans-serif;
     font-size: 1.5em;
     float: left;
@@ -288,8 +287,9 @@ body {
     position: relative;
     width:17.5%;
     top: 9%;
-    margin-left: 2.5%;
+    margin-left:5%;
     height: 80%;
+    line-height: 2em;
     box-shadow: 2px 2px 5px 1px #000;
 
 }
@@ -317,43 +317,62 @@ body {
 }
 
 .eventsidecontainer1 {
-                  position: absolute;
-                  top: 45%;
-                  left: 14%;
-                  width: 13%;
-                  height: 20%;
-                  background-image: url(../Bilder/bjorn.jpeg);
-                  overflow: hidden;
-                  box-shadow: 0px 5px 20px 0px #000;
-          }
+    position: absolute;
+    top: 45%;
+    left: 14%;
+    width: 13%;
+    height: 20%;
+    background-image: url(../Bilder/bjorn.jpeg);
+    overflow: hidden;
+    box-shadow: 0px 5px 20px 0px #000;
+}
 
 
 .eventsidecontainer2 {
-                  position: absolute;
-                  top: 45%;
-                  left: 42%;
-                  width: 30%;
-                  height: 20%;
-              
-                  box-shadow: 0px 5px 20px 0px #000;
-          }
+    position: absolute;
+    top: 45%;
+    left: 42%;
+    width: 30%;
+    height: 20%;
 
-.eventsidecontainer3 {
-                  position: absolute;
-                  top: 45%;
-                  left: 73%;
-                  width: 13%;
-                  height: 20%;
-
-                  box-shadow: 0px 5px 20px 0px #000;
+    box-shadow: 0px 5px 20px 0px #000;
 }
 
-        
+.eventsidecontainer3 {
+    position: absolute;
+    top: 45%;
+    left: 73%;
+    width: 13%;
+    height: 20%;
+
+    box-shadow: 0px 5px 20px 0px #000;
+}
+
+
 #eventsidemap {
-                  position: absolute;
-                  top: 45%;
-                  left: 28%;
-                  width: 13%;
-                  height: 20%;
-                  box-shadow: 0px 5px 20px 0px #000;
+    position: absolute;
+    top: 45%;
+    left: 28%;
+    width: 13%;
+    height: 20%;
+    box-shadow: 0px 5px 20px 0px #000;
+}
+
+.search-info-container {
+    width: 900px;
+    height: 80%;
+    position: relative;
+    margin: auto;
+    top: 10%;
+    box-shadow: 3px 3px 10px 1px #000;   
+
+}
+
+.search-info-header {
+    text-align: center;
+    color: #FFF;
+    position: relative;
+    top:25%;
+    font-family: sans-serif;
+    font-size: 2em;
 }
