--- a/css/forside.css
+++ b/css/forside.css
@@ -3,28 +3,38 @@ body {
 }
 
 .slideshow {
-    border: 1px solid blue;
-    position: absolute;
+    border: 1px solid darkgrey;
+    width: 80%;
     bottom: 0;
-    width: 100%;
+    margin: 0 auto;
     overflow: hidden;
     height: 300px;
+    
 }
 
 .slide {
-    position: relative;
     height: 300px;
     display: flex;
 }
 
+.slideshow-info {
+    width: 30%;
+    height: 100%;
+    background: grey;
+    opacity: .3;
+    padding: 8px;
+    float: right;
+    text-align: left;
+    overflow: scroll;
+}
+
 .social-fb {
-    position: absolute;
     bottom: 0;
-    padding: 3px;
+    padding: 10px;
     border: 2px;
     width: 50px;
     height: 35px;
-    right: 24%;
+    float: left;
 
 }
 
@@ -34,13 +44,13 @@ body {
 }
 
 .social-tw {
-    position: absolute;
     bottom: 0;
-    padding: 3px;
+    padding: 10px;
     border: 2px;
     width: 50px;
     height: 35px;
-    right: 12%;
+    display: inline-block;
+    margin-left: 15%;
     
 }
 
@@ -50,13 +60,11 @@ body {
 }
 
 .social-email {
-    position: absolute;
     bottom: 0;
-    padding: 3px;
+    padding: 10px;
     border: 2px;
     width: 50px;
-    height: 35px;
-    right: 1%;
+    float: right;
     
 }
 
@@ -68,7 +76,7 @@ body {
 
 .image01 {
     position: relative;
-    width: 70%;
+    max-width: 100%;
     background: white;
     padding: 0;
     
@@ -79,12 +87,32 @@ body {
     height: 100%;
 } 
 
-.info {
-    width: 30%;
-    background: grey;
-    opacity: .3;
-    padding: 8px;
+.image02 {
+    position: relative;
+    width: 70%;
+    background: white;
+    padding: 0;
+    
 }
+
+.image02 img {
+    width: 100%;
+    height: 100%;
+} 
+
+.image03 {
+    position: relative;
+    width: 70%;
+    background: white;
+    padding: 0;
+    
+}
+
+.image03 img {
+    width: 100%;
+    height: 100%;
+} 
+
 
 .button {
     position: absolute;
@@ -95,7 +123,7 @@ body {
 }
 
 .forward {
-    right: 0;
+    right: 10%;
 }
 body {
     margin: 0; 
