--- a/css/style.css
+++ b/css/style.css
@@ -396,7 +396,7 @@ html * {
     
 }
 
-.event-photo-container, .event-map-container,.event-description-container,.event-social-container {
+.event-photo-container, .event-map-container,.event-description-container {
     float: left;
     height: 100%;
     width: 20%;
@@ -418,7 +418,9 @@ html * {
 
 .event-social-container {
     width: 12.5%;
-    margin-left: 2.5%;
+    margin-left: 2.5%;    
+    float: left;
+    height: 100%;
 }
 
 .event-background {
@@ -447,3 +449,34 @@ html * {
 }
 
 
+
+.copy-event-btn, .ticket-event-btn {
+    width: 100%;
+    height: 20%;
+    box-shadow: 0px 5px 20px 0px #000;
+    margin: auto;
+    background-color: #FFF;
+    text-decoration: none;
+    color: #000;
+    margin-top: 20%;
+    
+}
+
+.copy-event-btn p, .ticket-event-btn p{
+    width: 75%;
+    height: 100%;
+    margin-top: 7.5%;
+}
+
+.copy-event-btn *, .ticket-event-btn *{
+    float: left;
+}
+
+.copy-event-btn:hover, .ticket-event-btn:hover {
+    background-color: #808080;
+}
+
+.event-btn-img {
+    max-height: 100%;
+    width:25%;
+}
