--- a/css/style.css
+++ b/css/style.css
@@ -270,11 +270,14 @@ html * {
     top: 30%;
 }
 
+.search-form {
+    height: 100%;
+}
+
 .search-criteria {
     height: 100%;
     width: 22.5%;
     margin-left: 2.5%;
-    cursor: pointer;
     box-shadow: 2px 2px 5px 1px #000;
     border: none;
 }
@@ -285,6 +288,7 @@ html * {
     font-family: sans-serif;
     font-size: 1.5em;
     float: left;
+    cursor: pointer;
 }
 
 .search-button {
@@ -295,6 +299,7 @@ html * {
     height: 80%;
     line-height: 2em;
     box-shadow: 2px 2px 5px 1px #000;
+    border-style: none;
 
 }
 
@@ -318,6 +323,8 @@ html * {
 }
 /*SEARCH CSS ENDS*/
 
+
+/*LANGUAGE BUTTON CSS STARTS*/
 .language-container {
     position: absolute;
     right: 0;
@@ -339,48 +346,9 @@ html * {
     line-height: 2.5em;
 }
 
-.eventsidecontainer1 {
-    position: absolute;
-    top: 45%;
-    left: 14%;
-    width: 13%;
-    height: 20%;
-    background-image: url(../Bilder/bjorn.jpeg);
-    overflow: hidden;
-    box-shadow: 0px 5px 20px 0px #000;
-}
+/*LANGUAGE BUTTON CSS ENDS*/
 
-
-.eventsidecontainer2 {
-    position: absolute;
-    top: 45%;
-    left: 42%;
-    width: 30%;
-    height: 20%;
-
-    box-shadow: 0px 5px 20px 0px #000;
-}
-
-.eventsidecontainer3 {
-    position: absolute;
-    top: 45%;
-    left: 73%;
-    width: 13%;
-    height: 20%;
-
-    box-shadow: 0px 5px 20px 0px #000;
-}
-
-
-#eventsidemap {
-    position: absolute;
-    top: 45%;
-    left: 28%;
-    width: 13%;
-    height: 20%;
-    box-shadow: 0px 5px 20px 0px #000;
-}
-
+/*EVENT-CALENDAR CSS STARTS*/
 
 .event-container {
     width: 100%;
@@ -447,8 +415,6 @@ html * {
     height: 15%;
     padding: 2.5% 0 2.5% 0;
 }
-
-
 
 .copy-event-btn, .ticket-event-btn {
     width: 100%;
