--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
     background-color: #404040;
 }
 
-.menu-line, .navigation-container:hover, .search-info-container, .copy-event-btn:hover, .ticket-event-btn:hover{    
+.menu-line, .navigation-container:hover, .search-info-container, .copy-event-btn:hover, .ticket-event-btn:hover, .no-event{    
     background-color: #808080;
 }
 
@@ -436,4 +436,20 @@ html * {
 .event-btn-img {
     max-height: 100%;
     width:25%;
+}
+
+.no-event {
+    width: 1300px;
+    height: 125px;
+    margin: auto 0 5% 0;
+    position: relative;
+    top: 10%;
+    box-shadow: 0px 5px 20px 0px #000;
+    text-align: center;
+}
+
+.no-event-text {
+    color: #FFF;
+    font-size: 2em;
+    line-height: 3.1em;
 }
